# Grep

./: README.md  grep.bat  pyproject.toml  script.py
grep/: __init__.py  __main__.py
