[project]
name = "grep"
dynamic = ["version"]
description = "Get regular expression results across files"
authors = [
    { name = "Havsalt", email = "knutolaihelgesen@gmail.com" }
]
dependencies = [
    "actus~=0.4.0",
    "colex~=0.1.0",
]
readme = "README.md"
requires-python = ">= 3.10"
license = { text = "MIT" }

[project.scripts]
"main" = "script:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.version]
path = "script.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = ["script.py", "grep.bat"]
